# scrappi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: Makefile  conf.py  index.rst  make.bat  productItemSet_2022_S2A.pkl
docs/content/developer/: api.rst  developer_guide.rst  filesystem.rst
docs/content/user/: api.rst  atbd.rst  common_queries.rst  config.rst  data_and_stac_structure.rst  download.rst  filesystem.rst  function_api.rst  product.rst  querying.rst  quickstart.rst  user_guide.rst
examples/: CAMS_example.py  ERA5_example.py  earthaccess_example.py  eodag_example.py  hypernets_example.py  local_STAC_example.py  productItemSet_2022_RCN.pkl  radcalnet_example.py
scrappi/: __init__.py  config.py  interface.py  product.py
scrappi/api/: __init__.py  base.py  earthaccess_api.py  eodag.py  factory.py  hypernets.py  insitubase.py  radcalnet_api_client.py  stac_api.py
scrappi/api/tests/: archive.db  test_base.py  test_earthaccess_api.py  test_eodag.py  test_factory.py  test_hypernets.py  test_radcalnet.py  test_stac_api.py
scrappi/etc/: defaults.yaml
scrappi/etc/config_templates/: initial_config.yaml
scrappi/fs/: __init__.py  base.py  factory.py  jasmin.py  localfilesystem.py  stac_href_resolver.py  stacfilesystem.py  tdrive.py  tdrive_temp.py
scrappi/fs/tests/: test_base.py  test_factory.py  test_localfs.py  test_stac_href_resolver.py
scrappi/tests/: test_interface.py  test_product.py
scrappi/utils/: plot_utils.py  utils.py
scrappi/utils/test/: test_plot_utils.py  test_utils.py
